// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style={
              Object {
                "msTransform": "rotate(90deg)",
                "transform": "rotate(90deg)",
              }
            }
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.accordion: true - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role="tablist"
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="tab"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style={
              Object {
                "msTransform": "rotate(90deg)",
                "transform": "rotate(90deg)",
              }
            }
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role="tabpanel"
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-collapse-item"
  >
    <div
      aria-expanded={false}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="tab"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
  </div>
</div>
`;

exports[`Render properties.activeKey: content_two - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role={null}
>
  <div
    className="ant-collapse-item"
  >
    <div
      aria-expanded={false}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
  </div>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style={
              Object {
                "msTransform": "rotate(90deg)",
                "transform": "rotate(90deg)",
              }
            }
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_two
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.bordered: false - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-borderless ant-collapse-icon-position-left"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style={
              Object {
                "msTransform": "rotate(90deg)",
                "transform": "rotate(90deg)",
              }
            }
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-collapse-item"
  >
    <div
      aria-expanded={false}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
  </div>
</div>
`;

exports[`Render properties.defaultActiveKey: content_two - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role={null}
>
  <div
    className="ant-collapse-item"
  >
    <div
      aria-expanded={false}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
  </div>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style={
              Object {
                "msTransform": "rotate(90deg)",
                "transform": "rotate(90deg)",
              }
            }
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_two
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.destroyInactivePanel: true - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style={
              Object {
                "msTransform": "rotate(90deg)",
                "transform": "rotate(90deg)",
              }
            }
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-collapse-item"
  >
    <div
      aria-expanded={false}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
  </div>
</div>
`;

exports[`Render properties.expandIcon: ArrowRightOutlined - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="loading-3-quarters"
          basePath=""
          className="anticon anticon-loading-3-quarters anticon-spin ant-collapse-arrow"
          id="properties.expandIcon: ArrowRightOutlined_expandIcon"
          required={false}
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading-3-quarters"
            fill="currentColor"
            focusable="false"
            height="1em"
            style={
              Object {
                "msTransform": "rotate(90deg)",
                "transform": "rotate(90deg)",
              }
            }
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-collapse-item"
  >
    <div
      aria-expanded={false}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="loading-3-quarters"
          basePath=""
          className="anticon anticon-loading-3-quarters anticon-spin ant-collapse-arrow"
          id="properties.expandIcon: ArrowRightOutlined_expandIcon"
          required={false}
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading-3-quarters"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
  </div>
</div>
`;

exports[`Render properties.expandIconPosition: right - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-right"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style={
              Object {
                "msTransform": "rotate(90deg)",
                "transform": "rotate(90deg)",
              }
            }
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-collapse-item"
  >
    <div
      aria-expanded={false}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
  </div>
</div>
`;

exports[`Render properties.forceRender: true - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style={
              Object {
                "msTransform": "rotate(90deg)",
                "transform": "rotate(90deg)",
              }
            }
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-collapse-item"
  >
    <div
      aria-expanded={false}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-inactive"
      role={null}
      style={
        Object {
          "display": "none",
        }
      }
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_two
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.panels - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style={
              Object {
                "msTransform": "rotate(90deg)",
                "transform": "rotate(90deg)",
              }
            }
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-collapse-item"
  >
    <div
      aria-expanded={false}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.panels.disabled - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active ant-collapse-item-disabled"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style={
              Object {
                "msTransform": "rotate(90deg)",
                "transform": "rotate(90deg)",
              }
            }
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-collapse-item ant-collapse-item-disabled"
  >
    <div
      aria-expanded={false}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
  </div>
</div>
`;

exports[`Render properties.panels.extraKey - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role="tablist"
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="tab"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style={
              Object {
                "msTransform": "rotate(90deg)",
                "transform": "rotate(90deg)",
              }
            }
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
      <div
        className="ant-collapse-extra"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_one_extra
        </div>
      </div>
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role="tabpanel"
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-collapse-item"
  >
    <div
      aria-expanded={false}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="tab"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
      <div
        className="ant-collapse-extra"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_two_extra
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.panels.title - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style={
              Object {
                "msTransform": "rotate(90deg)",
                "transform": "rotate(90deg)",
              }
            }
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-collapse-item"
  >
    <div
      aria-expanded={false}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
  </div>
</div>
`;

exports[`Render properties.showArrow: false - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active ant-collapse-no-arrow"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        className="{}"
      />
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          content_one
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-collapse-item ant-collapse-no-arrow"
  >
    <div
      aria-expanded={false}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        className="{}"
      />
    </div>
  </div>
</div>
`;

exports[`Render with html in panel title - value[0] 1`] = `
<div
  className="ant-collapse ant-collapse-icon-position-left"
  role={null}
>
  <div
    className="ant-collapse-item ant-collapse-item-active"
  >
    <div
      aria-expanded={true}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            style={
              Object {
                "msTransform": "rotate(90deg)",
                "transform": "rotate(90deg)",
              }
            }
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
    <div
      className="ant-collapse-content ant-collapse-content-active"
      role={null}
    >
      <div
        className="ant-collapse-content-box"
      />
    </div>
  </div>
  <div
    className="ant-collapse-item"
  >
    <div
      aria-expanded={false}
      className="ant-collapse-header"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <span
          aria-label="right"
          className="anticon anticon-right ant-collapse-arrow"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </div>
      <span
        className="{}"
      />
    </div>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.accordion: true 1`] = `true`;

exports[`Test Schema properties.accordion: true 2`] = `null`;

exports[`Test Schema properties.activeKey: content_two 1`] = `true`;

exports[`Test Schema properties.activeKey: content_two 2`] = `null`;

exports[`Test Schema properties.bordered: false 1`] = `true`;

exports[`Test Schema properties.bordered: false 2`] = `null`;

exports[`Test Schema properties.defaultActiveKey: content_two 1`] = `true`;

exports[`Test Schema properties.defaultActiveKey: content_two 2`] = `null`;

exports[`Test Schema properties.destroyInactivePanel: true 1`] = `true`;

exports[`Test Schema properties.destroyInactivePanel: true 2`] = `null`;

exports[`Test Schema properties.expandIcon: ArrowRightOutlined 1`] = `true`;

exports[`Test Schema properties.expandIcon: ArrowRightOutlined 2`] = `null`;

exports[`Test Schema properties.expandIconPosition: right 1`] = `true`;

exports[`Test Schema properties.expandIconPosition: right 2`] = `null`;

exports[`Test Schema properties.forceRender: true 1`] = `true`;

exports[`Test Schema properties.forceRender: true 2`] = `null`;

exports[`Test Schema properties.panels 1`] = `true`;

exports[`Test Schema properties.panels 2`] = `null`;

exports[`Test Schema properties.panels.disabled 1`] = `true`;

exports[`Test Schema properties.panels.disabled 2`] = `null`;

exports[`Test Schema properties.panels.extraKey 1`] = `true`;

exports[`Test Schema properties.panels.extraKey 2`] = `null`;

exports[`Test Schema properties.panels.title 1`] = `true`;

exports[`Test Schema properties.panels.title 2`] = `null`;

exports[`Test Schema properties.showArrow: false 1`] = `true`;

exports[`Test Schema properties.showArrow: false 2`] = `null`;

exports[`Test Schema with html in panel title 1`] = `true`;

exports[`Test Schema with html in panel title 2`] = `null`;
